<resources>
    <string name="app_name">HotelTestApp</string>
    <string name="top_bar_hotel">Отель</string>
    <string name="hotel_description">Об отеле</string>
    <string name="hotel_comfort">Удобства</string>
    <string name="hotel_included">Что включено</string>
    <string name="hotel_not_included">Что не включено</string>
    <string name="hotel_most_important">Самое необходимое</string>
    <string name="choose_room">К выбору номера</string>
    <string name="hotel_rating">%1d %2s</string>
    <string name="price">от %1s ₽</string>
    <string name="room_price">%1s ₽</string>
    <string name="room_additional_info">Подробнее о номере</string>
    <string name="room_choose">Выбрать номер</string>
    <string name="book_room">Бронирование</string>
    <string name="tour_departure_header">Вылет из</string>
    <string name="tour_country_header">Страна,город</string>
    <string name="tour_date_header">Даты</string>
    <string name="tour_nights_header">Кол-во ночей</string>
    <string name="tour_hotel_header">Отель</string>
    <string name="tour_room_header">Номер</string>
    <string name="tour_food_header">Питание</string>
    <string name="tour_date_text">%1s-%2s</string>
    <string name="personal_info_header">Информация о покупателе</string>
    <string name="hint_phone">Номер телефона</string>
    <string name="user_warning">Эти данные никому не передаются. После оплаты мы вышли чек на указанный вами номер и почту</string>
    <string name="hint_email">Почта</string>
    <string name="hint_name">Имя</string>
    <string name="hint_surname">Фамилия</string>
    <string name="hint_date">Дата рождения</string>
    <string name="hint_citizenship">Гражданство</string>
    <string name="hint_pass_num">Номер загранпаспорта</string>
    <string name="hint_pass_validality">Срок действия загранпаспорта</string>
    <string name="add_tourist">Добавить туриста</string>
    <string name="error_text">Данные введены неправильно</string>
    <string name="tour_text">Тур</string>
    <string name="price_fuel">Топливный сбор</string>
    <string name="price_service">Сервисный сбор</string>
    <string name="price_all">К оплате</string>
    <string name="pay_all">Оплатить %1s</string>
    <string name="order_paid">Заказ оплачен</string>
    <string name="order_in_work">Ваш заказ принят в работу</string>
    <string name="order_text">Подтверждение заказа №104893 может занять некоторое время (от 1 часа до суток). Как только мы получим ответ от туроператора, вам на почту придет уведомление.</string>
    <string name="good">Супер!</string>

    <plurals name="nights">
        <item quantity="zero">Без ночей</item>
        <item quantity="one">%d ночь</item>
        <item quantity="few">%d ночи</item>
        <item quantity="other">%d ночей</item>
    </plurals>
</resources>