<?xml version="1.0" encoding="utf-8"?>


<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_section_background"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/top_bar_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/top_bar_hotel"
                style="@style/Text.TopBar"
                android:layout_margin="16dp"
                />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/hotel_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@id/top_bar_text"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotel_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:paddingVertical="5dp"
                app:layout_constraintTop_toBottomOf="@id/hotel_pager"
                app:layout_constraintStart_toStartOf="parent"
                android:drawableStart="@drawable/ic_star"
                android:background="@drawable/item_rating_background"
                style="@style/Text.MediumOrange"
                tools:text = "5 Превосходно"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotel_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="8dp"
                app:layout_constraintTop_toBottomOf="@id/hotel_rating"
                style="@style/Text.TitleLarge"
                tools:text="Steigenberger Makadi"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotel_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/hotel_title"
                style="@style/Text.TitleSmallBlue"
                tools:text="Madinat Makadi, Safaga Road, Makadi Bay, Египет"
                />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotel_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/hotel_location"
                app:layout_constraintStart_toStartOf="parent"
                style="@style/Text.PriceLarge"
                tools:text="от 134 673 ₽"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotel_price_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:paddingVertical="16dp"
                app:layout_constraintBottom_toBottomOf="@id/hotel_price"
                app:layout_constraintStart_toEndOf="@id/hotel_price"
                style="@style/Text.MediumGray"
                tools:text="за тур с перелётом"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_section_background"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotel_section_desc"
                style="@style/Text.TitleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="16dp"
                android:text="@string/hotel_description"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/hotel_pins_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:nestedScrollingEnabled="false"
                app:layout_constraintTop_toBottomOf="@id/hotel_section_desc"
                tools:listitem="@layout/item_hotel_pin"
                />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/hotel_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/hotel_pins_recycler"
                android:paddingTop="12dp"
                android:paddingBottom="16dp"
                style="@style/Text.Medium"
                tools:text="Отель VIP-класса с собственными гольф полями. Высокий уровнь сервиса. Рекомендуем для респектабельного отдыха. Отель принимает гостей от 18 лет!"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/desc_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:background="@drawable/item_pin_background"
                app:layout_constraintTop_toBottomOf="@id/hotel_desc"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/comfort_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/comfort_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="12dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_comfort_image"
                        />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/comfort_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/comfort_image"
                        android:text="@string/hotel_comfort"
                        style="@style/Text.MediumBlack"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/comfort_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/comfort_header"
                        app:layout_constraintStart_toEndOf="@id/comfort_image"
                        android:text="@string/hotel_most_important"
                        style="@style/Text.TitleSmallGray"
                        />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_comfort_arrow_next"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/separate_comfort_include"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:srcCompat="@drawable/item_gray_line"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/comfort_layout"
                    app:layout_constraintBottom_toTopOf="@id/included_layout"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/included_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/comfort_layout"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/included_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="12dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_included_image"
                        />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/included_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/included_image"
                        android:text="@string/hotel_included"
                        style="@style/Text.MediumBlack"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/included_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/included_header"
                        app:layout_constraintStart_toEndOf="@id/included_image"
                        android:text="@string/hotel_most_important"
                        style="@style/Text.TitleSmallGray"
                        />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_comfort_arrow_next"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/separate_include_not_include"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    app:srcCompat="@drawable/item_gray_line"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/included_layout"
                    app:layout_constraintBottom_toTopOf="@id/not_included_layout"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/not_included_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@id/separate_include_not_include"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/not_included_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingHorizontal="12dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:srcCompat="@drawable/ic_not_included_image"
                        />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/not_included_header"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toEndOf="@id/not_included_image"
                        android:text="@string/hotel_not_included"
                        style="@style/Text.MediumBlack"
                        />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/not_included_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@id/not_included_header"
                        app:layout_constraintStart_toEndOf="@id/not_included_image"
                        android:text="@string/hotel_most_important"
                        style="@style/Text.TitleSmallGray"
                        />
                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:srcCompat="@drawable/ic_comfort_arrow_next"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_background_button"
            android:paddingHorizontal="16dp"
            android:layout_marginTop="8dp"
            >

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="12dp"
                android:paddingVertical="15dp"
                android:text="@string/choose_room"
                />

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>